style.css
body{
  margin:0;
  padding:0;
}

h1{
  font-family:sans-serif;
  color:white;
}

.grid-wrapper{
  display:grid;
  height: 100vh;
  width: 100%;
  grid-template-columns: 1fr 4fr;
  grid-template-rows:1fr 3fr ;

  background-color: black;
}

.home-con{
  background-color:rgba(32, 32, 32, 0.897) ;
  height: 150px;
  width:250px;
  margin-right: auto;
  margin-left:auto;
  border-radius: 10px;
  margin-top: 8px;
  padding: 5px;
  padding-bottom: 20px;
}

.home-con-ul{
  padding-left: 0px;
  list-style: none;
}

.home-con-ul>li{
  display: flex;
  align-items: center;
  width: 200px;
  color:white;
  font-family: sans-serif;
  font-weight: 700;
  margin-bottom: 12px;
  margin-right: 20px;
 
}

.icon{
  margin-left: 18px;
  margin-right: 20px;
}


.sidebar-panel{
  background-color:rgba(32, 32, 32, 0.897) ;
  width:250px;
  grid-row:2/3;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 2px;
  padding: 5px;
  border-radius: 10px;
  height: 71.8vh; /* Take up full viewport height */

}

.custom-play-box{
  overflow: scroll;
  height: 37%;
  width: 100%;

}

.cus-playlist{
  width: 100%;
  height: 70%;
  border-radius: 8px;
  margin-top: 8px;
  margin-bottom: 30px;
  background-color:rgb(44, 44, 44) ;
}

.cus-podcast{
  border-radius: 8px;
  width: 100%;
  height: 90%;
  margin-bottom: 20px;
  background-color:rgb(44, 44, 44) ;

}
h2,p{
  color: white;
  font-family: sans-serif;
  font-weight: 700;
}
article{
  background-color:rgba(32, 32, 32, 0.897) ;
  grid-row:1/3;
  margin-top: 8px;
  margin-left: 3px;
  margin-right: 5px;
  margin-bottom: 2px;
  border-radius: 10px;
  overflow:scroll;
  height: 97vh; /* Take up full viewport height */

}

#title-marg{
  margin-top:70px;
  margin-left: 30px;
}

#title-marg-two{
  margin-top: 60px;
  margin-left: 30px;
}

.sticky{
  display:flex;
  background-color:rgb(32, 32, 32) ;
  width: 100%;
  height: 60px;
  position:fixed;
}

.head-bar{
  display: flex;
  list-style: none;
  margin-left: 500px;
  width: 270px;
  border-right:2px solid rgba(190, 190, 190, 0.788) ;
}

.btn-log{
  border-radius: 20px;
  font-family:sans-serif;
  color:black;
  font-weight:700;
  margin-top: auto;
  margin-bottom: auto;
  font-size: 15px;
  padding-left: 30px;
  padding-right: 30px;
  border-color: rgba(240, 248, 255, 0.027);
  height: 70%;
}

#sign-up{
  margin-top: auto;
  margin-bottom: auto;
  margin-left: 24px;
  margin-right: 32px;
  font-size: 15px;
  color: rgb(148, 148, 148);
}

.head-bar>li{
  color: rgb(224, 224, 224);
  font-family: sans-serif;
  font-weight: 600;
  font-size: 16px;
  letter-spacing: 1px;
  margin-right: 8px;
  margin-top: auto;
  margin-bottom: auto;

}

.card-con{
  display:flex;
  justify-content: space-evenly;
  width: 100%;
  height: 260px;
}

.card{
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
  width:180px;
  border-radius: 9px;
  padding-bottom: 5px;
  background-color: rgb(36, 36, 36);
}

.picture{
  height: 65%;
  width: 78%;
  border-radius: 8px;
  background-color:rgb(44, 44, 44) ;
}

.text-box{
  margin-top: 8px;

}

.text{
  text-align: left;
  color: white;
  font-size: 14px;
  font-weight: 800;
  margin-left: 20px;
  font-family: sans-serif;
}


.end-box{
  width: 100%;
  height: 260px;
  background-color: red;
  margin-top:90px;
  margin-bottom:40px;
}

.content-foot{
  width: 100%;
  height: 140px;
  background-color: purple;
}

